--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css"
         integrity="sha384-9gVQ4dYFwwWSjIDZnLEWnxCjeSWFphJiwGPXr1jddIhOegiu1FwO5qRGvFXOdJZ4" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
-    <link href="https://fonts.googleapis.com/css?family=Martel:bold|regular|Montserrat:regular|bold&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Martel:bold|regular|Montserrat:regular|bold&display=swap"
+        rel="stylesheet">
 
 
 </head>
