upating the length slider

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             <br />
             <input type="range" min="8" max="128" value="10" name="slider" id="slider">
             <br />
-            <p id="length">Length</p>
+            <p id="length">Length: 10</p>
 
 
 
