add event listener for special characters

--- a/index.html
+++ b/index.html
@@ -31,7 +31,8 @@
             <br />
             <p id="length">Length: 10</p>
 
-
+            <input type="checkbox" id="specialChar" ng-model="isFull" checked>
+            <label for="specialChar">Include Special Characters</label>
 
 
             <div class="buttons">
